// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CityOfMiamiBudget /> renders correctly when status is fulfilled 1`] = `
<div>
  <h3>
    The Data:
  </h3>
  <p>
    {"a":"apples","b":"bananas"}
  </p>
</div>
`;

exports[`<CityOfMiamiBudget /> renders correctly when status is idle 1`] = `
<div>
  <button>
    Fetch Data!
  </button>
</div>
`;

exports[`<CityOfMiamiBudget /> renders correctly when status is pending 1`] = `
<div>
  <p>
    Loading...
  </p>
</div>
`;
